"Show Hidden Objects" operator's options missing, which is inconsistent with "Reveal Hidden" operator #116339

Closed
opened 2023-12-19 14:01:06 +01:00 by Weasel On a Stick · 4 comments

System Information
Operating system:
Graphics card: AMD 5500U

Blender Version
Broken: 4.0.2
Worked: (newest version of Blender that worked as expected)

Short description of error
Unhiding objects doesn't bring up any options, thus selecting every objects that is un-hidden. Where as its Edit mode counterpart has a bool property to prevent that.

Exact steps for others to reproduce the error
Based on the default startup.

Screenshot 2023-12-19 195531
image

**System Information** Operating system: Graphics card: AMD 5500U **Blender Version** Broken: 4.0.2 Worked: (newest version of Blender that worked as expected) **Short description of error** Unhiding objects doesn't bring up any options, thus selecting every objects that is un-hidden. Where as its Edit mode counterpart has a bool property to prevent that. **Exact steps for others to reproduce the error** Based on the default startup. ![Screenshot 2023-12-19 195531](/attachments/d2521aab-795a-4804-a5b6-5441a7e5ae04) ![image](/attachments/59ecdeba-3c59-4204-825e-a92cf9f6b65d)
Weasel On a Stick added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-19 14:01:06 +01:00
Member

The property is actually there, but was marked PROP_SKIP_SAVE | PROP_HIDDEN in 4234cddda9

@brecht : do you recall why this was necessary? Seems to make sense to reactivate this?

The property is actually there, but was marked `PROP_SKIP_SAVE | PROP_HIDDEN` in 4234cddda9ed59e5a7fff7043a2add2aaf158d23 @brecht : do you recall why this was necessary? Seems to make sense to reactivate this?
Member

Talking about doing this

diff --git a/source/blender/editors/object/object_edit.cc b/source/blender/editors/object/object_edit.cc
index 86545c89647..176c512b5c5 100644
--- a/source/blender/editors/object/object_edit.cc
+++ b/source/blender/editors/object/object_edit.cc
@@ -329,7 +329,6 @@ void OBJECT_OT_hide_view_clear(wmOperatorType *ot)
   ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO;
 
   PropertyRNA *prop = RNA_def_boolean(ot->srna, "select", true, "Select", "");
-  RNA_def_property_flag(prop, PropertyFlag(PROP_SKIP_SAVE | PROP_HIDDEN));
 }
 
 static int object_hide_view_set_exec(bContext *C, wmOperator *op)
Talking about doing this ```diff diff --git a/source/blender/editors/object/object_edit.cc b/source/blender/editors/object/object_edit.cc index 86545c89647..176c512b5c5 100644 --- a/source/blender/editors/object/object_edit.cc +++ b/source/blender/editors/object/object_edit.cc @@ -329,7 +329,6 @@ void OBJECT_OT_hide_view_clear(wmOperatorType *ot) ot->flag = OPTYPE_REGISTER | OPTYPE_UNDO; PropertyRNA *prop = RNA_def_boolean(ot->srna, "select", true, "Select", ""); - RNA_def_property_flag(prop, PropertyFlag(PROP_SKIP_SAVE | PROP_HIDDEN)); } static int object_hide_view_set_exec(bContext *C, wmOperator *op) ```
Philipp Oeser added
Status
Needs Info from Developers
Module
User Interface
and removed
Status
Needs Triage
labels 2023-12-19 15:57:35 +01:00

I don't think it's really necessary.

It does change the behavior of menu entries and shortcuts, in the sense that it will now remember the select setting from the last time. That seems to be case already for the corresponding mesh operator, might as well follow that.

@lichtwerk, so I think you can just commit your proposed change.

I don't think it's really necessary. It does change the behavior of menu entries and shortcuts, in the sense that it will now remember the select setting from the last time. That seems to be case already for the corresponding mesh operator, might as well follow that. @lichtwerk, so I think you can just commit your proposed change.
Member

so I think you can just commit your proposed change.

@lichtwerk ^ 🙂

> so I think you can just commit your proposed change. @lichtwerk ^ 🙂
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2024-03-07 11:31:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116339
No description provided.